--- a/football_tournament/templates/tournament/home.html
+++ b/football_tournament/templates/tournament/home.html
@@ -18,24 +18,39 @@
         Live - Viale Della Stazione, 17, 20010, Santo Stefano Ticino </a>
 </div>
 <div class="text"><b>Cosa ci sarà:</b>
-<ul class="text" style="list-style-type: none; margin-left: 5px;">
-    <li class="text" style="margin-bottom: 20px;">
-        16 squadre
-    </li>
-    <li class="text" style="margin-bottom: 20px;">
-        32 partite
-    </li>
-    <li class="text" style="margin-bottom: 20px;">
-        Sorteggio Live con diretta Instagram
-    </li>
-    <li class="text" style="margin-bottom: 20px;">
-        Serata di apertura il 3 Giugno <!--con Concerto Live dei <ahref="https://www.instagram.com/p/C6jYZCNNuO6/">Dementos</a> (Cover Band dei GemBoy) + Aperitivo -->
-    </li>
-    <li class="text" style="margin-bottom: 20px;">
-        Serata di chiusura 11 Luglio con le Finalissime 1° - 2° posto e 3° - 4° posto, premiazioni, paninaro, dj set con
-        vocalist
-    </li>
-</ul>
+    <ul class="text" style="list-style-type: none; margin-left: 5px;">
+        <li class="text" style="margin-bottom: 20px;">
+            16 squadre
+        </li>
+        <li class="text" style="margin-bottom: 20px;">
+            32 partite
+        </li>
+        <li class="text" style="margin-bottom: 20px;">
+            Sorteggio Live con diretta Instagram
+        </li>
+        <li class="text" style="margin-bottom: 20px;">
+            Serata di apertura il 3 Giugno
+            <!--con Concerto Live dei <ahref="https://www.instagram.com/p/C6jYZCNNuO6/">Dementos</a> (Cover Band dei GemBoy) + Aperitivo -->
+        </li>
+        <li class="text" style="margin-bottom: 20px;">
+            Serata di chiusura 11 Luglio con le Finalissime 1° - 2° posto e 3° - 4° posto, premiazioni, paninaro, dj set
+            con
+            vocalist
+        </li>
+    </ul>
 </div>
-<div class="text"><b>Social</b>: Potete seguirci anche sulla nostra pagina Instagram: <a  href="https://www.instagram.com/torneo_copamundial/">torneo_copamundial</a> </div>
+<div class="text"><b>Social</b>:
+
+
+    <ul class="text" style="list-style-type: none; margin-left: 5px;">
+        <li class="text" style="margin-bottom: 20px;">
+            Potete seguirci anche sulla nostra pagina Instagram: <a
+                href="https://www.instagram.com/torneo_copamundial/">torneo_copamundial</a>
+        </li>
+        <li class="text" style="margin-bottom: 20px;">
+            Per tutte le foto, iscriviti al nostro canale <a href="https://t.me/+DalZ4G80baJhODE82">Telegram</a>
+        </li>
+    </ul>
+</div>
+
 {% endblock %}
